- Finished up conf3, still needing some directives added but it sortof works. Rehash doesn't yet. 
-  Fixed some idiotic lack of src/modules/Makefile.in changes for the sake of commands.so when 
  /zline /kline etc was moved to a module
- Converted _conf_alias to conf3, in the process changed the format to be slightly more
  stable. See aliases/aliases.conf for the format changes
- Numerous Sts-coded-conf3-while-sick bugs
- Added SVSLUSERS, allows changing of local/global max users. This is designed so services
  can make sure all servers report the same global max and that a local max can be adjusted
  if for example a clone flood occurs. It is NOT designed to make the max count higher than
  you actually have.
- Fixed a bug in the win32 debugger where the contents of the core file were not written
  until ok was clicked. Reported by Simon Bell.
- Added an operflag can_override (v) only opers with this flag are allowed to use
  oper-override.
- Fixed a bug in SVSO where the t and Z flags could not be removed.
- Updated .RELEASE.NOTES to include can_override
- Fixed a bug where if set::help-channel was missing it was reported twice.
- Made modules able to have configuration directives in conf3. The system to do this is 
  completely new and works differently. All remnants of the old system have been removed.
- Changed the module config system slightly to be able to detect more errors.
- /rehash for conf3 (that works) :)
- Fixed win32 compile error with default: ;
- Fixed several conf3 errors
- Converted deny {} to conf3, in the process added some extra crule functions to help
  report errors better
- Fixed sendto_ routines to use slot number as index into sentalong array
- Fixed a conf3 bug
- Made alias {}'s get rehashed
- Made modules correctly rehash, this involves adding a Mod_Test function to modules that
  need to perform configuration tests. This is currently only implimented for dynamic linking